- Delay for computers that write too fast to the serial port. - A part of an audio visualizer.
git-svn-id: http://rainbowdash.googlecode.com/svn/trunk@32 3e5c543c-d930-c8bb-fc8d-33ea4bafe755

--- a/Host/Makefile
+++ b/Host/Makefile
@@ -1,7 +1,7 @@
-all: becho aecho rtime clocktest rainbowd rainbowclock
+all: becho aecho rtime clocktest rainbowd rainbowclock rainbowspectrum
 
 clean:
-	rm -f becho aecho rtime clocktest rainbowd rainbowclock
+	rm -f becho aecho rtime clocktest rainbowd rainbowclock rainbowspectrum
 	rm -f *.class
 
 becho: becho.c
@@ -24,5 +24,8 @@ rainbowd: rainbowd.c
 
 rainbowclock: rainbowclock.c
 	gcc -O3 -Wall -ansi -pedantic -o rainbowclock rainbowclock.c
+
+rainbowspectrum: rainbowspectrum.c
+	gcc -O3 -Wall -ansi -pedantic -o rainbowspectrum rainbowspectrum.c
 
 .PHONY: all clean
