Host-side code for RainbowDashboard-compatible clock.
git-svn-id: http://rainbowdash.googlecode.com/svn/trunk@37 3e5c543c-d930-c8bb-fc8d-33ea4bafe755

--- a/Host/Makefile
+++ b/Host/Makefile
@@ -11,7 +11,7 @@ aecho: aecho.c
 	gcc -O3 -Wall -ansi -pedantic -o aecho aecho.c
 
 rtime: rtime.c
-	gcc -O3 -Wall -ansi -pedantic -o rtime rtime.c
+	gcc -O3 -Wall -o rtime rclock.c rtime.c
 
 rtime.class: rtime.java
 	javac rtime.java
